tests/NormalTests/paczka1/small_fuzzy/62173526.err
Error in line 1: n6EYxWeVg S702 76,1
Error in line 3: 2GNtuxQ A162 39,0
